--- a/BlackBookExercise/BlackBookExercise/App.xaml
+++ b/BlackBookExercise/BlackBookExercise/App.xaml
@@ -1,8 +1,15 @@
-﻿<Application x:Class="BlackBookExercise.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:BlackBookExercise"
+             x:Class="BlackBookExercise.App">
+    
     <Application.Resources>
-         
-    </Application.Resources>
+            <ResourceDictionary>
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary>
+                        <local:AppBootstrapper x:Key="bootstrapper" />
+                    </ResourceDictionary>
+                </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary>
+        </Application.Resources>
 </Application>
