--- a/BlackBookExercise/BlackBookExercise/Views/ShellView.xaml
+++ b/BlackBookExercise/BlackBookExercise/Views/ShellView.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="BlackBookExercise.ShellView"
+<Window x:Class="BlackBookExercise.Views.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
