--- a/BlackBookExercise/BlackBookExercise/Views/DebitorsView.xaml
+++ b/BlackBookExercise/BlackBookExercise/Views/DebitorsView.xaml
@@ -2,10 +2,15 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+            <DataGrid Name="Selector" ItemsSource="{Binding Path=Debitors}" CanUserAddRows="False" AutoGenerateColumns="False" SelectionChanged="Selector_OnSelectionChanged">
+                <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding Path=FirstName}" Header="First Name"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Path=LastName}" Header="Last Name"></DataGridTextColumn>
+            </DataGrid.Columns>
+            </DataGrid>
     </Grid>
 </UserControl>
