--- a/BlackBookExercise/BlackBookExercise/Views/ShellView.xaml
+++ b/BlackBookExercise/BlackBookExercise/Views/ShellView.xaml
@@ -1,12 +1,27 @@
 <Window x:Class="BlackBookExercise.Views.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:vm="clr-namespace:BlackBookExercise.ViewModels"
+        xmlns:v="clr-namespace:BlackBookExercise.Views"
+        Title="My Black Book">
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type vm:DebitorViewModel}">
+            <v:DebitorsView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:ExchangeViewModel}">
+            <v:ExchangesView/>
+        </DataTemplate>
+    </Window.Resources>
+    <Window.DataContext>
+        <vm:ShellViewModel/>
+    </Window.DataContext>
     <Grid Background="White">
-        <TextBlock Text="Hello Caliburn Micro!"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   FontSize="20" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <ContentControl Grid.Column="0" Content="{Binding Path=DebitorVm}"></ContentControl>
+        <ContentControl Grid.Column="1" Content="{Binding Path=ExchangeVm}"></ContentControl>
     </Grid>
 
 </Window>
